--- a/Artisania/Back-end/.gitignore
+++ b/Artisania/Back-end/.gitignore
@@ -21,31 +21,6 @@ pids
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
-coverage/
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
 # IDE
 .vscode/
 .idea/
@@ -57,5 +32,5 @@ jspm_packages/
 Thumbs.db
 
 # Uploads
-src/uploads/*
-!src/uploads/.gitkeep
+uploads/*
+!uploads/.gitkeep
