--- a/Artisania/Back-end/package.json
+++ b/Artisania/Back-end/package.json
@@ -2,13 +2,15 @@
   "name": "artisania-backend",
   "version": "1.0.0",
   "description": "Backend API for Artisania marketplace",
-  "main": "src/server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["marketplace", "artisanat", "api"],
+  "author": "Artisania Team",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
@@ -16,16 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.40.0",
-    "express-rate-limit": "^6.10.0",
-    "helmet": "^7.0.0",
-    "express-validator": "^7.0.1",
-    "nodemailer": "^6.9.4"
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1"
   }
 }
