--- a/Artisania/Back-end/package.json
+++ b/Artisania/Back-end/package.json
@@ -8,17 +8,24 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["marketplace", "artisanat", "api"],
+  "keywords": [
+    "marketplace",
+    "artisanat",
+    "api"
+  ],
   "author": "Artisania Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-validator": "^7.0.1"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
+    "mongoose": "^7.5.0",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
