--- a/Artisania/Back-end/package.json
+++ b/Artisania/Back-end/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -25,6 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongoose": "^7.5.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
