--- a/Artisania/Front-end/Dockerfile
+++ b/Artisania/Front-end/Dockerfile
@@ -1,22 +1,15 @@
 # Dockerfile pour Artisania Frontend
-FROM node:18-alpine as build
+FROM node:24-alpine as build
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci
-
 COPY . .
 
 RUN npm run build
 
-FROM nginx:alpine
-
-COPY --from=build /app/dist /usr/share/nginx/html
-
-COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "dev"]
