feat: Update Docker configurations and enhance frontend components
- Change Dockerfiles for both frontend and backend to use Node 18-alpine for improved performance and compatibility.
- Update docker-compose.yml to remove the version specification for better flexibility.
- Refactor frontend and backend Dockerfiles to streamline the build process and ensure proper dependency installation.
- Enhance the Login and Register pages with new illustrations and improved layout for better user experience.
- Update index.html to reflect the correct path for the favicon.

These changes improve application performance, user interface, and maintainability of Docker configurations.

--- a/Artisania/Back-end/Dockerfile
+++ b/Artisania/Back-end/Dockerfile
@@ -1,14 +1,18 @@
 # Dockerfile pour Artisania Backend
-FROM node:24-alpine
+FROM node:18-alpine
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
-RUN npm ci --only=production
+# Install all dependencies (including devDependencies for build)
+RUN npm ci
 
+# Copy source code
 COPY . .
 
 EXPOSE 5001
 
-CMD ["nodemon", "server.js"]
+# Use node instead of nodemon for production
+CMD ["node", "server.js"]
